[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ivory"
dynamic = ["version"]
description = "Ivory: Simple and flexible workflow engine"
readme = "README.rst"
requires-python = ">=3.10,<4"
dependencies = [
    "numpy>=2.0.0",
    "py~=1.11.0",
    "pytest>=8.0.0",
    "setuptools~=59.6.0",
    "joblib",
    "ipyparallel",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.setuptools]
packages = ["ivory"]
