[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ivory"
dynamic = ["version"]
description = "Ivory: Simple and flexible workflow engine"
readme = "README.rst"
requires-python = ">=3.10,<4"
dependencies = [
    "numpy>=2.0.0",
    "py~=1.11.0",
    "pytest>=8.0.0",
    "setuptools~=59.6.0",
    "joblib",
    "ipyparallel",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.setuptools]
packages = ["ivory"]

[tool.ruff]
# Python version compatibility
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) by default
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]

# Allow autofix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by line-length setting)
]

[tool.ruff.lint.per-file-ignores]
# Ignore import sorting in __init__.py files
"__init__.py" = ["F401", "I001"]
# Ignore certain rules in test files
"test/*.py" = ["E501"]

[tool.ruff.lint.isort]
# Use the same style as Black
combine-as-imports = true
force-wrap-aliases = true
